@@ -1,6 +1,6 @@
 Package: MKclass
 Version: 0.4
-Date: 2021-08-10
+Date: 2022-12-01
 Title: Statistical Classification
 Authors@R: person("Matthias", "Kohl", role = c("aut", "cre"),
                   email = "Matthias.Kohl@stamats.de", 
@@ -13,5 +13,5 @@ Suggests: knitr, rmarkdown, foreach, parallel, doParallel
 VignetteBuilder: knitr
 Description: Performance measures and scores for statistical classification such as accuracy, sensitivity, specificity, recall, similarity coefficients, AUC, GINI index, Brier score and many more. Calculation of optimal cut-offs and decision stumps (Iba and Langley (1991), <doi:10.1016/B978-1-55860-247-2.50035-8>) for all implemented performance measures. Hosmer-Lemeshow goodness of fit tests (Lemeshow and Hosmer (1982), <doi:10.1093/oxfordjournals.aje.a113284>; Hosmer et al (1997), <doi:10.1002/(SICI)1097-0258(19970515)16:9%3C965::AID-SIM509%3E3.0.CO;2-O>). Statistical and epidemiological risk measures such as relative risk, odds ratio, number needed to treat (Porta (2014), <doi:10.1093%2Facref%2F9780199976720.001.0001>).
 License: LGPL-3
-URL: https://www.stamats.de/
+URL: https://github.com/stamats/MKclass
 
