@@ -7,6 +7,9 @@
 ###########################################################
 - added na.rm argument to function AUC.
 - adapted links (http -> https).
+- added BSS
+- changed package link to github repository 
+
 
 ###########################################################
 ## Version 0.3
@@ -18,6 +21,7 @@
 - Introduced print methods for class perfMeasure and perfScore.
 - Added new argument transform to function perfScores.
 
+
 ###########################################################
 ## Version 0.2
 ###########################################################
@@ -25,6 +29,7 @@
 - Changed the structure of functions perfMeasures and perfScores
 - New function confMatrix, to compute confusion matrix including 
   a print method.
+
 
 ###########################################################
 ## Version 0.1
